<resources>
    <string name="app_name">LMS</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="childs_rewards">Childs\nRewards</string>
    <string name="behaviourPoints">BP:5</string>
    <string name="dutyPoints">DP:5</string>
    <string name="name1">Kamil</string>
    <string name="name2">Bartek</string>
    <string name="name3">Paulina</string>
    <string name="name4">Szymon</string>
    <string name="addButton">Add child</string>
    <string name="childsName">Child\'s name</string>
    <string name="birthday">Birthday</string>
    <string name="behaviour">Behaviour</string>
    <string name="duty">Duty</string>
    <string name="duty_name">Name of the duty</string>
    <string name="duty_point">Points</string>
    <string name="duty_repeat_time">Duty repeat time</string>
    <string name="choose_child">Choose child</string>
</resources>